--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 
 <body>
-		<form class="form-inline" style="margin-top:20vh;">
+		<form class="form-inline" style="margin-top:20vh;" onsubmit="return false;">
 			<div class="col-12">
 				<label class="visually-hidden" for="connectIP">ws://127.0.0.1:8000</label>
 				<div class="input-group" style="width: 50vw; margin-left: auto; margin-right: auto;">
@@ -61,6 +61,7 @@
 				<button style="width: 50vw; margin-left: auto; margin-right: auto;" onClick="connect()" class="btn btn-primary">Connect</button>
 			</div>
 		</form>
+
 		<table class="table" style="width: 50vw; margin-left: auto; margin-right: auto; margin-top: 5rem;">
 			<thead>
 				<th scope="col">#</th>
