--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 			</tbody>
 		</table>
 
-		<div style="padding-left:50vh; padding-top: 5rem;">
+		<div style="padding-left:50vw; padding-top: 5rem;">
 			<p>Syntax rules:</p>
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;`url` - interpolate an image into a message.</p>
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;<strike>{{url}}[text] - hyperlink the url to the message.</strike></strike></p>
