change image width

--- a/chatroom.html
+++ b/chatroom.html
@@ -92,7 +92,7 @@
 						if (img.match(/((([A-Za-z]{3,9}:(?:\/\/)?)(?:[\-;:&=\+\$,\w]+@)?[A-Za-z0-9\.\-]+|(?:www\.|[\-;:&=\+\$,\w]+@)[A-Za-z0-9\.\-]+)((?:\/[\+~%\/\.\w\-_]*)?\??(?:[\-\+=&;%@\.\w_]*)#?(?:[\.\!\/\\\w]*))?)/)) {
 							var im = document.createElement("img")
 							im.src = img
-							im.style.maxHeight = "25rem"
+							im.style.maxHeight = "20vw"
 							im.style.paddingTop = "1rem"
 							im.style.paddingLeft = "1rem"
 							im.style.paddingBottom = "1rem"
